Fix QueryPane layout on mobile

--- a/client/stylesheets/ui/pane.less
+++ b/client/stylesheets/ui/pane.less
@@ -39,3 +39,10 @@ div.ui-pane {
         }
     }
 }
+
+
+@media screen and (max-width:500px) {
+    div.ui-pane {
+        left: 0;
+    }
+}
